# event-menu

./: .dockerignore  .gitignore  .local.env  Makefile  README.md  api-local.Dockerfile  deploy.yml  local.yml  production.yml
api/: Makefile  pyproject.toml  requirements.txt
api/requirements/: local.txt
api/src/config/: settings.py  urls.py
api/src/config/settings/: base.py  local.py  production.py
api/src/v1/: admin.py  apps.py  models.py  serializers.py  views.py
api/src/v1/migrations/: 0001_initial.py  0002_product_image_alter_product_name.py  0003_sponsor.py  0004_product_display_sponsor_display.py
api/src/v1/signals/: __init__.py  product.py  sponsor.py
docker/local/api/: Dockerfile
docker/local/web/: Dockerfile  start.sh
docker/production/api/: Dockerfile  entrypoint.sh  start.sh
docker/production/nginx/: Dockerfile
docker/production/web/: Dockerfile  start.sh
nginx/: default.conf
web/: Makefile  index.html  package-lock.json  vite.config.ts
web/src/: App.tsx
web/src/components/: Header.css  Header.tsx  Menu.css  Menu.tsx  Sponsor.css  Sponsor.tsx
